2010-01-29  Steve Falkenburg  <sfalken@apple.com>

        Build fix.

        * page/Geolocation.cpp:
        (WebCore::Geolocation::startUpdating):

2010-01-29  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Darin Adler.

        Client-based Geolocation starts updating before getting consent from the user
        https://bugs.webkit.org/show_bug.cgi?id=34343

        * page/Geolocation.cpp:
        (WebCore::Geolocation::startRequest): Pass notifier instead of options to startUpdating.
        (WebCore::Geolocation::setIsAllowed): Add the observer or notify of error for deferred startUpdating.
        (WebCore::Geolocation::startUpdating): Pass notifier instead of options, since we may need to call it if we fail to get user consent.
        Defer adding the observer if we don't yet have user consent, since this could kick off
        server-based wifi Geolocation requests.
        * page/Geolocation.h:

2010-01-22  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Dan Bernstein.

        Crash in fast/dom/Window/window-properties if Geolocation enabled
        https://bugs.webkit.org/show_bug.cgi?id=34013
        
        Add null check to fix Geolocation crash in fast/dom/Window/window-properties.
        
        * page/Geolocation.cpp:
        (WebCore::createGeoposition):

2010-01-26  Steve Block  <steveblock@google.com>

        Reviewed by Adam Barth.

        Moves JSC-specific classes from bridge/jni/JNIBridge to bridge/jni/jsc/JNIBridgeJSC
        https://bugs.webkit.org/show_bug.cgi?id=33958

        This allows bridge/jni/JNIBridge to be used with both JSC and V8.
        A later change will add the V8 equivalent of these JSC-specific classes.

        No new tests, refactoring only.

        * Android.jscbindings.mk: Modified. Added JNIBridgeJSC.cpp
        * GNUmakefile.am: Modified. Added JNIBridgeJSC.h
        * WebCore.xcodeproj/project.pbxproj: Modified. Added JNIBridgeJSC.[cpp|h]