@@ -283,9 +283,13 @@ PassRefPtr<Geolocation::GeoNotifier> Geolocation::startRequest(PassRefPtr<Positi
         if (haveSuitableCachedPosition(notifier->m_options.get()))
             notifier->setUseCachedPosition();
         else {
-            if (notifier->hasZeroTimeout() || startUpdating(notifier.get()))
-                notifier->startTimerIfNeeded();
-            else
+            if (notifier->hasZeroTimeout() || startUpdating(notifier.get())) {
+#if ENABLE(CLIENT_BASED_GEOLOCATION)
+                // Only start timer if we're not waiting for user permission.
+                if (!m_startRequestPermissionNotifier)
+#endif            
+                    notifier->startTimerIfNeeded();
+            } else
                 notifier->setFatalError(PositionError::create(PositionError::POSITION_UNAVAILABLE, "Failed to start Geolocation service"));
         }
     }
@@ -407,6 +411,7 @@ void Geolocation::setIsAllowed(bool allowed)
     if (m_startRequestPermissionNotifier) {
         if (isAllowed()) {
             // Permission request was made during the startUpdating process
+            m_startRequestPermissionNotifier->startTimerIfNeeded();
             m_startRequestPermissionNotifier = 0;
             if (!m_frame)
                 return;
